# brfid.github.io

./: .coverage  .gitignore  .gitlab-ci.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  DOCUMENTATION-REFACTORING-SUMMARY.md  LLM-PROBLEM-SUMMARY.md  MEMORY.md  Makefile  PLAN.md  PRODUCTION-DEPLOYMENT.md  PROJECT-STATE-FOR-RESEARCH.md  README.md  REFACTORING-COMPLETE.md  REFACTORING-PLAN.md  STATUS.md  TIMELINE-TO-PRODUCTION.md  TODO.md  TOPS20-TAPE-BOOT-ATTEMPTS.md  WORKFLOWS.md  _config.yml  aws-start.sh  aws-status.sh  aws-stop.sh  docker-compose.arpanet.chaosnet.yml  docker-compose.arpanet.phase1.yml  docker-compose.arpanet.phase2.yml  docker-compose.production.yml  docker-compose.vax-pdp10-serial.yml  docusaurus.config.ts  index.html  index.md  meet.md  package-lock.json  package.json  portfolio.yaml  pretendtoread.md  (+4 more)
.github/: WORKFLOW_TEST.md
_layouts/: default.html
arpanet/: AUTHENTIC-FTP-STATUS.md  CONSOLE-AUTOMATION-PROBLEM.md  CONSOLE-AUTOMATION-SOLUTION.md  Dockerfile.chaosnet-shim  Dockerfile.imp  Dockerfile.pdp10  Dockerfile.pdp10-its  Dockerfile.pdp10-kl10  Dockerfile.pdp11  FTP-TESTING.md  INSTALLATION-LOG.md  LLM-HOST-LINK-BLOCKER-2026-02-09.md  NEXT-STEPS.md  PHASE1-SUMMARY.md  PHASE1-VALIDATION.md  PHASE2-PLAN.md  PHASE2-STEP2.2-PDP10.md  PHASE2-VALIDATION.md  PHASE3-IMPLEMENTATION-PLAN.md  PHASE3-PROGRESS.md  README.md  SESSION-2026-02-07.md  TESTING-GUIDE.md  TESTING-PDP10.md  TOPS20-INSTALLATION-GUIDE.md  TOPS20-INSTALLATION-PROBLEM.md  TOPS20-QUICKSTART.md  TOPS20-SOLUTION.md  TOPS20-STATUS-FINAL.md  VAX-APPS-SETUP.md  pdp11-boot.sh
arpanet_logging/: README.md  __init__.py  __main__.py  cli.py  orchestrator.py
blog/: 2025-09-04-welcome.md
docs/: COLD-START.md  INDEX.md  PRE-DEPLOY-CHECKLIST.md  STRUCTURE-REFACTORING-ANALYSIS.md  YAML-ENHANCEMENT-VALIDATION-2026-02-13.md  aws-cost-optimization.md  vax-yaml-parser-enhancement.md
host_logging/: __init__.py  __main__.py  cli.py  orchestrator.py
hugo/: hugo.toml
public/: 404.html  robots.txt
resume_generator/: __init__.py  __main__.py  bio_yaml.py  cli.py  contact_json.py  landing.py  manifest.py  manpage.py  normalize.py  pdf.py  portfolio.py  render.py  resume_fields.py  types.py  uudecode.py  vax_arpanet_stage.py  vax_stage.py  vax_yaml.py  vintage_arpanet_stage.py  vintage_stage.py  vintage_yaml.py
resume_site/: cli.py  pdf.py  render.py
scripts/: arpanet-log.sh  console-transfer.py  edcloud-vintage-runner.sh  edcloud_lifecycle.py  extract-console-logs.py  extract-pdp11-logs.py  extract-vax-logs.py  generate-build-info.py  generate-logs-page.py  merge-logs.py  pdp11-validate.sh  pdp11_pexpect.py  preview-build-widget.sh  print-resume.mjs  publish-arpanet.sh  publish-local.sh  publish-vintage.sh  simh_session.py  vax-build-and-encode.sh  vax-console-build.sh  vax-console-upload.sh  vax_pexpect.py
site/: 404.html  index.html  index.json  index.xml  robots.txt  sitemap.xml
site-test/: contact.html  vax-manifest.txt
site-test2/: brad.man.txt  index.html  vax-manifest.txt
site-v2/: vax-manifest.txt
templates/: _base.html.j2  build-info-widget.html  build-info.css  index.html.j2  portfolio.html.j2  resume.css  resume.html.j2
test_infra/: DESIGN.md  IMPLEMENTATION.md  README.md  setup.sh
tests/: conftest.py  helpers.py  test_arpanet_logging_cli.py  test_arpanet_orchestrator.py  test_arpanet_parser.py  test_arpanet_phase_scripts.py  test_arpanet_test_utils.py  test_base_collector.py  test_bio_yaml.py  test_cli.py  test_collectors.py  test_console_transfer.py  test_docker_utils.py  test_hi1_shim.py  test_landing.py  test_log_models.py  test_log_storage.py  test_manifest.py  test_manpage.py  test_merge_logs.py  test_network_utils.py  test_normalize.py  test_parser_regression_fixtures.py  test_pdf.py  test_simh_session.py  test_topology_cli.py  test_topology_generators.py  test_topology_registry.py  test_uudecode.py  test_vax_arpanet_stage.py  test_vax_stage.py  test_vax_yaml.py  test_vintage_arpanet_stage.py  test_vintage_stage.py  test_vintage_yaml.py
(+390 files in other folders)
