[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brfid-resume"
version = "0.1.0"
description = "Static resume generator (HTML + PDF) for GitHub Pages."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Jinja2>=3.1",
  "playwright>=1.55",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "pytest>=8.0",
]

[project.scripts]
resume-gen = "resume_generator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["resume_generator*"]

[tool.mypy]
python_version = "3.11"
files = ["resume_generator", "tests"]
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "jinja2",
  "jinja2.*",
  "playwright",
  "playwright.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
