[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brfid-resume"
version = "0.1.0"
description = "Static resume generator (HTML + PDF) for GitHub Pages."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Jinja2>=3.1",
  "PyYAML>=6.0",
  "playwright>=1.55",
  "docker>=7.0",  # For ARPANET logging system
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6",
  "mypy>=1.8",
  "pylint>=3.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "types-PyYAML",
  "vulture>=2.11",
]

[project.scripts]
resume-gen = "resume_generator.cli:main"
arpanet-logging = "arpanet_logging.cli:main"
arpanet-topology = "arpanet.topology.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["resume_generator*", "arpanet_logging*", "arpanet*"]

[tool.mypy]
python_version = "3.11"
files = ["resume_generator", "arpanet_logging", "tests"]
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "jinja2",
  "jinja2.*",
  "playwright",
  "playwright.*",
  "yaml",
  "yaml.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "arpanet_logging",
  "arpanet_logging.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: Fast unit tests with no external system dependencies",
  "integration: Integration tests crossing module boundaries",
  "docker: Tests requiring Docker or containerized services",
  "slow: Long-running tests excluded from default quality gate",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "S",   # flake8-bandit
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101", # assert
]

[tool.pylint.main]
py-version = "3.11"
jobs = 0

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
  # Keep signal high; ruff/mypy cover most of this already.
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
]

[tool.vulture]
min_confidence = 80
exclude = [".venv", "site", "templates", "tests"]
